# fastmcp-dog-python

./: CONVERSION_NOTES.md  GOOSE_DESKTOP_SETUP.md  README.md  pyproject.toml  requirements.txt  run_server.sh  setup.sh  test_server.py
src/: __init__.py  server.py
