[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmcp-dog-python"
version = "1.0.0"
description = "Python port of FastMCP Dog Server - Get random dog images via MCP protocol"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "fastmcp", "dog", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/fastmcp-dog-python"
Documentation = "https://github.com/yourusername/fastmcp-dog-python/blob/main/README.md"
Repository = "https://github.com/yourusername/fastmcp-dog-python.git"
Issues = "https://github.com/yourusername/fastmcp-dog-python/issues"

[project.scripts]
fastmcp-dog = "src.server:main"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
